refactor of build process (cr. Stuart Rossiter); bugfix: standalone not assigning task to user's worklist; bugfix: NPE when getting info for pre-beta-4 specs on case mgt screen; small refactors of wsinvoker service